Сделал лабу и доп. задание

--- a/index.html
+++ b/index.html
@@ -15,33 +15,33 @@
             <div class="calculator__main">
                 <div class="calculator__buttons">
                     <div class="calculator__sector">
-                        <button class="calculator__button calculator__button--special">C</button>
-                        <button class="calculator__button calculator__button--special calculator__button--backspace">+/-</button> <!--Поменять на backspace -->
-                        <button class="calculator__button calculator__button--special">%</button>
-                        <button class="calculator__button calculator__button--math-symbs">/</button>
+                        <button class="calculator__button calculator__button--special calculator__button--clear">C</button>
+                        <button class="calculator__button calculator__button--special calculator__button--backspace"><=</button> <!--Поменять на backspace -->
+                        <button class="calculator__button calculator__button--special calculator__button--percent">%</button>
+                        <button class="calculator__button calculator__button--math-symbs calculator__button--div">/</button>
                     </div>
                     <div class="calculator__sector">
-                        <button class="calculator__button">7</button>
-                        <button class="calculator__button">8</button>
-                        <button class="calculator__button">9</button>
-                        <button class="calculator__button calculator__button--math-symbs">x</button>
+                        <button class="calculator__button calculator__button--digit">7</button>
+                        <button class="calculator__button calculator__button--digit">8</button>
+                        <button class="calculator__button calculator__button--digit">9</button>
+                        <button class="calculator__button calculator__button--math-symbs calculator__button--mult">x</button>
                     </div>
                     <div class="calculator__sector">
-                        <button class="calculator__button">4</button>
-                        <button class="calculator__button">5</button>
-                        <button class="calculator__button">6</button>
-                        <button class="calculator__button calculator__button--math-symbs">-</button>
+                        <button class="calculator__button calculator__button--digit">4</button>
+                        <button class="calculator__button calculator__button--digit">5</button>
+                        <button class="calculator__button calculator__button--digit">6</button>
+                        <button class="calculator__button calculator__button--math-symbs calculator__button--minus">-</button>
                     </div>
                     <div class="calculator__sector">
-                        <button class="calculator__button">1</button>
-                        <button class="calculator__button">2</button>
-                        <button class="calculator__button">3</button>
-                        <button class="calculator__button calculator__button--math-symbs">+</button>
+                        <button class="calculator__button calculator__button--digit">1</button>
+                        <button class="calculator__button calculator__button--digit">2</button>
+                        <button class="calculator__button calculator__button--digit" >3</button>
+                        <button class="calculator__button calculator__button--math-symbs calculator__button--plus">+</button>
                     </div>
                     <div class="calculator__sector">
-                        <button class="calculator__button">0</button>
-                        <button class="calculator__button">.</button>
-                        <button class="calculator__button calculator__button--math-symbs calculator__button--bigger">=</button>
+                        <button class="calculator__button calculator__button--digit">0</button>
+                        <button class="calculator__button calculator__button--dot calculator__button--digit">.</button>
+                        <button class="calculator__button calculator__button--math-symbs calculator__button--bigger calculator__button--result">=</button>
                     </div>
                 </div>
             </div>
