--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <div class="calculator">
         <div class="container">
             <div class="calculator__header">
-                <span class="calculator__result">0</span>
+<!--                <span class="calculator__result">0</span>-->
+                <input class="calculator__result" autofocus type="text">
             </div>
             <div class="calculator__main">
                 <div class="calculator__buttons">
@@ -24,7 +25,7 @@
                         <button class="calculator__button calculator__button--digit">7</button>
                         <button class="calculator__button calculator__button--digit">8</button>
                         <button class="calculator__button calculator__button--digit">9</button>
-                        <button class="calculator__button calculator__button--math-symbs calculator__button--mult">x</button>
+                        <button class="calculator__button calculator__button--math-symbs calculator__button--mult">*</button>
                     </div>
                     <div class="calculator__sector">
                         <button class="calculator__button calculator__button--digit">4</button>
@@ -49,5 +50,6 @@
     </div>
 
     <script src="script.js"></script>
+<!--    <script src="keyboardScript.js"></script>-->
 </body>
 </html>
